--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "prettier"
     ],
     "rules": {
+      "react/jsx-props-no-spreading": "off",
       "prettier/prettier": "error",
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
